--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="images/2nd wallpaper.png" alt="">
         </div>
         <div class="half-width">
-            <h1>Dream  Big</h1>
+            <h1 class="dream-big-color">Dream  Big</h1>
         <h2>Beacome a Web Developer</h2>
         <p>
             I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
