footer and experiance added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1><span class="name-color">Srijon's</span> World</h1>
         <h2>About Me</h2>
         <p>
-            My name is <b>Khaled Bin Srijon</b>.I'm study BSc in CSE at Daffodil International Universty.I'm learning Web Development in Programing Hero website.I'm just learn about how to coding a website using HTMl and CSS.I'm a just beginner.It's my first portfolio.I will not stop until I become a <b>WEB DEVELOPER</b>.
+            My name is <b>Khaled Bin Srijon</b>.I'm study BSc in CSE at Daffodil International Universty.I'm learning Web Development in Programing Hero website.I'm just learn about how to coding a website using HTMl and CSS.I'm just a beginner.It's my first portfolio.I will not stop until I become a <b>WEB DEVELOPER</b>.
         </p>
         <a class="link-button" target="blank" href="https://www.linkedin.com/in/khaled-bin-srijon/">Hire Me</a>
         </div>
@@ -42,13 +42,13 @@
     <section class="experiance-area">
         <h1>Experiances</h1>
          <div class="fexiable-container">
-            <div class="experiances-item">
+            <div id="Full-stack" class="experiances-item">
                 <h2>Full Stack Developer</h2>
                 <h3 class="blue-color">2024-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
    
             </div>
-            <div class="experiances-item">
+            <div id="Web-developer" class="experiances-item">
                 <h2>Baby Web Developer</h2>
                 <h3 class="blue-color">2022-Present | Heo Learner</h3>
                 <p>
@@ -58,5 +58,10 @@
          </div>
 
     </section>
+    <footer>
+        <p>
+            &copy Copyright Srijon 2022 , a Web Developer
+        </p>
+    </footer>
 </body>
 </html>
