--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div id="Web-developer" class="experiances-item">
                 <h2>Baby Web Developer</h2>
-                <h3 class="blue-color">2022-Present | Heo Learner</h3>
+                <h3 class="blue-color">2022-Present | Hero Learner</h3>
                 <p>
                    They didn't offer me a job. But I made myself as a web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
                 </p>
